manifests/influxdb/service.yaml
---
apiVersion: v1
kind: Service
metadata:
    name: influxdb
    namespace: influxdb
    annotations:
      metallb.universe.tf/allow-shared-ip: "192.168.86.220"
spec:
    ports:
      - name: influxdb
        port: 8086
        targetPort: 8086
        protocol: TCP
    selector:
        app: influxdb
    type: LoadBalancer
