manifests/influxdb/ingress.yaml
# ---
# apiVersion: traefik.containo.us/v1alpha1
# kind: IngressRoute
# metadata:
#   name: influxdb-ingress
#   namespace: influxdb
#   annotations:
#     kubernetes.io/ingress.class: traefik-external
# spec:
#   entryPoints:
#     - websecure
#   routes:
#     - match: Host(`influxdb.local.example.com`) # create A record in pihole
#       kind: Rule
#       services:
#         - name: influxdb
#           port: 8086
#   tls:
#     secretName: local-example-com-tls # or local-example-com-staging-tls
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: influxdb-ingress
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: influxdb
            port:
              number: 8086
